"Player" pickups, initial inventory setup
And fighter craft launch system during play state

--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\draco18s\Editor\TriValueDrawer.cs" />
     <Compile Include="Assets\draco18s\Editor\CustomScrollbarEd.cs" />
     <Compile Include="Assets\codeandweb.com\Editor\UIImageSetSizeAndPivot.cs" />
+    <Compile Include="Assets\draco18s\Editor\ResourcesManagerEd.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\codeandweb.com\Editor\SettingsTexturePackerImporter.txt" />
